library/pod-security-policy/forbidden-sysctls/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspforbiddensysctls
  annotations:
    metadata.gatekeeper.sh/title: "Forbidden Sysctls"
    metadata.gatekeeper.sh/version: 1.2.2
    metadata.gatekeeper.sh/bundle: "pod-security-baseline, pod-security-restricted"
    description: >-
      Controls the `sysctl` profile used by containers. Corresponds to the
      `allowedUnsafeSysctls` and `forbiddenSysctls` fields in a PodSecurityPolicy.
      When specified, any sysctl not in the `allowedSysctls` parameter is considered to be forbidden.
      The `forbiddenSysctls` parameter takes precedence over the `allowedSysctls` parameter.
      For more information, see https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/
spec:
  crd:
    spec:
      names:
        kind: K8sPSPForbiddenSysctls
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Controls the `sysctl` profile used by containers. Corresponds to the
            `allowedUnsafeSysctls` and `forbiddenSysctls` fields in a PodSecurityPolicy.
            When specified, any sysctl not in the `allowedSysctls` parameter is considered to be forbidden.
            The `forbiddenSysctls` parameter takes precedence over the `allowedSysctls` parameter.
            For more information, see https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/
          properties:
            allowedSysctls:
              type: array
              description: "An allow-list of sysctls. `*` allows all sysctls not listed in the `forbiddenSysctls` parameter."
              items:
                type: string
            forbiddenSysctls:
              type: array
              description: "A disallow-list of sysctls. `*` forbids all sysctls."
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
      - engine: K8sNativeValidation
        source:
          variables:
          - name: isUpdate
            expression: has(request.operation) && request.operation == "UPDATE"
          - name: sysctls
            expression: '!has(variables.anyObject.spec.securityContext) ? [] : !has(variables.anyObject.spec.securityContext.sysctls) ? [] : variables.anyObject.spec.securityContext.sysctls'
          - name: allowedSysctlPrefixes
            expression: |
              !has(variables.params.allowedSysctls) ? [] : variables.params.allowedSysctls.filter(sysctl, sysctl.endsWith("*")).map(sysctl, string(sysctl).replace("*", ""))
          - name: allowedSysctlExplicit
            expression: |
              !has(variables.params.allowedSysctls) ? [] : 
                variables.params.allowedSysctls.filter(sysctl, !sysctl.endsWith("*"))
          - name: forbiddenSysctlPrefixes
            expression: |
              !has(variables.params.forbiddenSysctls) ? [] : variables.params.forbiddenSysctls.filter(sysctl, sysctl.endsWith("*")).map(sysctl, string(sysctl).replace("*", ""))
          - name: forbiddenSysctlExplicit
            expression: |
              !has(variables.params.forbiddenSysctls) ? [] : 
                variables.params.forbiddenSysctls.filter(sysctl, !sysctl.endsWith("*"))
          - name: allowedSysctlsString
            expression: |
              !has(variables.params.allowedSysctls) ? "unspecified" : size(variables.params.allowedSysctls) == 0 ? "empty" : variables.params.allowedSysctls.join(", ")
          - name: violatingSysctls
            expression: |
              (variables.sysctls.filter(sysctl,
                (sysctl.name in variables.forbiddenSysctlExplicit ||
                variables.forbiddenSysctlPrefixes.exists(fsp, string(sysctl.name).startsWith(fsp))) ||
                (has(variables.params.allowedSysctls) &&
                !(sysctl.name in variables.allowedSysctlExplicit) &&
                !variables.allowedSysctlPrefixes.exists(asp, string(sysctl.name).startsWith(asp)))))
          validations:
          - expression: 'variables.isUpdate || size(variables.violatingSysctls) == 0'
            messageExpression: '"The sysctl is not allowed for pod: " + variables.anyObject.metadata.name + ", forbidden: " + variables.params.forbiddenSysctls.join(", ") + ", allowed: " + variables.allowedSysctlsString'
      - engine: Rego
        source:
          rego: |
            package k8spspforbiddensysctls

            import future.keywords.contains
            import future.keywords.if

            import data.lib.exclude_update.is_update

            # Block if forbidden
            violation contains {"msg": msg, "details": {}} if {
                # spec.securityContext.sysctls field is immutable.
                not is_update(input.review)

                sysctl := input.review.object.spec.securityContext.sysctls[_].name
                forbidden_sysctl(sysctl)
                msg := sprintf("The sysctl %v is not allowed, pod: %v. Forbidden sysctls: %v", [sysctl, input.review.object.metadata.name, input.parameters.forbiddenSysctls])
            }

            # Block if not explicitly allowed
            violation contains {"msg": msg, "details": {}} if {
                not is_update(input.review)
                sysctl := input.review.object.spec.securityContext.sysctls[_].name
                not allowed_sysctl(sysctl)
                allowmsg := allowed_sysctl_string()
                msg := sprintf("The sysctl %v is not explicitly allowed, pod: %v. Allowed sysctls: %v", [sysctl, input.review.object.metadata.name, allowmsg])
            }

            # * may be used to forbid all sysctls
            forbidden_sysctl(_) if {
                input.parameters.forbiddenSysctls[_] == "*"
            }

            forbidden_sysctl(sysctl) if {
                input.parameters.forbiddenSysctls[_] == sysctl
            }

            forbidden_sysctl(sysctl) if {
                forbidden := input.parameters.forbiddenSysctls[_]
                endswith(forbidden, "*")
                startswith(sysctl, trim_suffix(forbidden, "*"))
            }

            # * may be used to allow all sysctls
            allowed_sysctl(_) if {
                input.parameters.allowedSysctls[_] == "*"
            }

            allowed_sysctl(sysctl) if {
                input.parameters.allowedSysctls[_] == sysctl
            }

            allowed_sysctl(sysctl) if {
                allowed := input.parameters.allowedSysctls[_]
                endswith(allowed, "*")
                startswith(sysctl, trim_suffix(allowed, "*"))
            }

            allowed_sysctl(_) if {
                not input.parameters.allowedSysctls
            }

            allowed_sysctl_string := out if {
                not input.parameters.allowedSysctls
                out = "unspecified"
            }

            allowed_sysctl_string := out if {
                out = input.parameters.allowedSysctls
            }
          libs:
            - |
              package lib.exclude_update

              import future.keywords.contains
              import future.keywords.if

              is_update(review) if {
                  review.operation == "UPDATE"
              }
